<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidAmData</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_solicitudes">Solicitudes</string>
    <string name="title_activity_actas">Actas</string>
    <string name="title_activity_irregularidades_observaciones">IrregularidadesObservaciones</string>
    <string name="no_archivos">no hay archivos</string>
    <string name="title_activity_file_explorer">Explorador de Archivos</string>
    <string name="title_activity_censo_carga">CensoCarga</string>
    <string name="title_activity_acometida">Acometida</string>
    <string name="title_activity_cambio_contador">CambioContador</string>
    <string name="title_activity_sellos">Sellos</string>
    <string name="AcometidaBtnEliminar">Eliminar</string>
    <string name="CensoBtnEliminar">Eliminar</string>
    <string name="CensoLblValorVatios">0</string>
    <string name="CensoLblValorCantidad">0</string>
    <string name="ErrorBtnGuardar">Guardar</string>
    <string name="title_activity_parametros">Parametros</string>
    <string name="ContadorDialogBtnAceptar">Aceptar</string>
    <string name="ContadorBtnEliminar">Eliminar</string>
    <string name="IrrObsBtnEliminarObservacion">Eliminar</string>
    <string name="IrrObsBtnEditarObservacion">Editar</string>
    <string name="dd_btn_aceptar">Aceptar</string>
    <string name="dd_btn_cancelar">Cancelar</string>
    <string name="dd_lbl_text1">text1</string>
    <string name="dd_lbl_text2">text2</string>
    <string name="title_activity_dialogo_doble_txt"></string>
    <string name="dd_lbl_titulo">titulo</string>
    <string name="title_activity_dialog_single"></string>
    <string name="ds_lbl_titulo">titulo</string>
    <string name="ds_lbl_text1">text1</string>
    <string name="ds_btn_aceptar">Aceptar</string>
    <string name="ds_btn_cancelar">Cancelar</string>
    <string name="title_activity_medidor_pruebas">MedidorPruebas</string>
    <string name="PruebasLblTituloIntegracion">Prueba de Integracion</string>
    <string name="IntegracionLblLectIni">Lect. Inicial</string>
    <string name="IntegracionLblLectFinal">Lect. Final</string>
    <string name="IntegracionLblGiros">Giros</string>
    <string name="title_activity_materiales">Materiales</string>
    <string name="title_activity_datos_acta_adecuaciones">DatosActaAdecuaciones</string>
    <string name="DatosActaLblTelefono">Telefono</string>
    <string name="title_activity_dialog_confirm">Confirmacion de Accion</string>
    <string name="title_activity_dialog_informacion">Informacion Importante</string>
    <string name="DetalleOrdenEmpty"></string>
    <string name="title_activity_bodega_contadores">CONTADORES DISPONIBLES</string>
    <string name="title_activity_servicio_nuevo">Creacion Orden de Nuevo Servicio</string>
    <string name="title_activity_auto_gestion">Creacion de Autogestion</string>
    <string name="SolicitudesLblUsuario">Usuario</string>
    <string name="SolicitudesLblMunicipios">Municipios</string>
    <string name="SolicitudesLblActividades">Actividades</string>

</resources>
