<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <Button
        android:id="@+id/ds_btn_cancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ds_txt_text1"
        android:layout_below="@+id/ds_txt_text1"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="23dp"
        android:text="@string/ds_btn_cancelar" />

    <TextView
        android:id="@+id/ds_lbl_titulo"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/ds_lbl_titulo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ds_txt_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ds_lbl_titulo"
        android:layout_below="@+id/ds_lbl_titulo"
        android:layout_marginRight="21dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/ds_lbl_text1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ds_txt_text1"
        android:layout_alignTop="@+id/ds_txt_text1"
        android:gravity="right|center_vertical"
        android:text="@string/ds_lbl_text1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/ds_btn_aceptar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ds_btn_cancelar"
        android:layout_alignBottom="@+id/ds_btn_cancelar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="38dp"
        android:text="@string/ds_btn_aceptar" />

</RelativeLayout>